# Total-Editor-3

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  Pete's Tower Enhanced Edition.te3  README.md  SConstruct  TIMAP3_SPECS.md  TIMAP3_SPECS_2.md  TIMAP3_SPECS_3.md  TODO.md  app.cpp  app.h  assets.cpp  assets.h  camera.cpp  camera.h  changelog.md  cmake_install.cmake  components.cpp  components.h  imgui.ini  input.cpp  input.h  instructions.html  main.cpp  mesh.cpp  mesh.h  node.cpp  node.h  shader.cpp  shader.h  shapes.blend  texture.cpp  texture.h  todo.md  transform.cpp  transform.h
assets/maps/: Pete's Tower.te3  some-forts.te3  ti2-E3M1.te3  ti2-malicious-intents.te3  ti2-space-station.te3
assets/models/: e1m2.glb  shapes.blend  shapes.blend1  wraith.glb  wraith.vox
assets/models/shapes/: untitled.mtl  wedge_corner_inner.mtl
assets/music/: malicious_intents.xm
assets/original/: editordocumentation.txt  indexes.txt
assets/original/maps/: E1M1.ti  E1M10.ti  E1M2.ti  E1M3.ti  E1M4.ti  E1M5.ti  E1M6.ti  E1M7.ti  E1M8.ti  E1M9.ti  E255M1.ti  E2M1.ti  E2M10.ti  E2M2.ti  E2M3.ti  E2M4.ti  E2M5.ti  E2M6.ti  E2M7.ti  E2M8.ti  E2M9.ti  E3M1.ti  E3M10.ti  E3M2.ti  E3M3.ti  E3M4.ti  E3M5.ti  E3M6.ti  E3M7.ti  E3M8.ti  E3M9.ti  E5M5.ti  E9M1.ti  EPISODEINFO.txt  MAPINFO.txt
assets/shaders/: map_geom.fs  map_geom.vs
glm/: Makefile  cmake_install.cmake
imgui/: CMakeLists.txt  cmake_install.cmake
imgui/src/: imgui_impl_opengl3.cpp
instructions/: instructions.html
libraries/include/extras/: raygui.h
libraries/include/imgui/: rlImGui.h  rlImGuiColors.h
libraries/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp  rlImGui.cpp
src/: app.cpp  app.hpp  array_list.h  assets.cpp  assets.hpp  c_helpers.hpp  camera_movement.cpp  defer.hpp  dialogs.cpp  dialogs.hpp  draw_extras.h  editor_mode.hpp  ent.cpp  ent.hpp  ent_mode.cpp  ent_mode.hpp  files_util.hpp  grid.hpp  grid_extras.h  gui.cpp  gui.hpp  main.c  main.cpp  map_man.cpp  map_man.hpp  map_man_export.cpp  map_man_te2.cpp  math_stuff.hpp  menu_bar.cpp  menu_bar.hpp  pick_mode.cpp  pick_mode.hpp  place_mode.cpp  place_mode.hpp  text_util.hpp  tile.c  tile.cpp  tile.h  tile.hpp
src/assets/: obj_loader.cpp  obj_loader.hpp
src/assets/fonts/: font_dejavu.h  liberation_mono_ttf.h  softball_gold_ttf.h
src/assets/models/: missing_obj.h
src/dialogs/: about_dialog.cpp  asset_path_dialog.cpp  confirmation_dialog.cpp  dialogs.cpp  dialogs.hpp  expand_map_dialog.cpp  export_dialog.cpp  file_dialog.cpp  instructions_dialog.cpp  new_map_dialog.cpp  settings_dialog.cpp  shortcuts_dialog.cpp
src/ent_mode/: ent_mode.cpp  ent_mode.hpp
src/map_man/: map_man.cpp  map_man.hpp  map_man_actions.cpp  map_man_export.cpp  map_man_te2.cpp
src/pick_mode/: pick_mode.cpp  pick_mode.hpp  shape_pick_mode.cpp  texture_pick_mode.cpp
src/place_mode/: brush_cursor.cpp  ent_cursor.cpp  place_mode.cpp  place_mode.hpp  tile_cursor.cpp
(+2 files in other folders)
